--- a/EasyBrowser/Base.lproj/Main.storyboard
+++ b/EasyBrowser/Base.lproj/Main.storyboard
@@ -18,22 +18,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ge1-Di-6fd">
-                                <state key="normal" title="Open in Safari"/>
-                                <connections>
-                                    <action selector="openPageInSafari:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yco-Oq-oQc"/>
-                                </connections>
-                            </button>
+                            <webView contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0WP-KB-69B">
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </webView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t2N-5j-OY3">
+                                <items>
+                                    <barButtonItem style="plain" id="8VJ-yJ-Wt7">
+                                        <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="3C8-HF-K02">
+                                            <rect key="frame" x="16" y="7" width="207" height="30"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <nil key="textColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="go"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="BYZ-38-t0r" id="ieo-tV-TMa"/>
+                                            </connections>
+                                        </textField>
+                                    </barButtonItem>
+                                    <barButtonItem systemItem="rewind" id="mVB-nu-agM">
+                                        <connections>
+                                            <action selector="goBack" destination="0WP-KB-69B" id="LMT-de-xyv"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem systemItem="fastForward" id="YxB-2R-TgA">
+                                        <connections>
+                                            <action selector="goForward" destination="0WP-KB-69B" id="BA4-Lh-ud9"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Ge1-Di-6fd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="19V-PQ-DHH"/>
-                            <constraint firstItem="Ge1-Di-6fd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="GZ5-ik-khN"/>
+                            <constraint firstItem="t2N-5j-OY3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="8zA-EQ-WUC"/>
+                            <constraint firstItem="0WP-KB-69B" firstAttribute="top" secondItem="t2N-5j-OY3" secondAttribute="bottom" id="RDr-6V-Ay3"/>
+                            <constraint firstAttribute="trailing" secondItem="0WP-KB-69B" secondAttribute="trailing" id="jOi-eF-iDv"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0WP-KB-69B" secondAttribute="bottom" id="km0-oL-roq"/>
+                            <constraint firstAttribute="trailing" secondItem="t2N-5j-OY3" secondAttribute="trailing" id="p9y-UG-wFa"/>
+                            <constraint firstItem="t2N-5j-OY3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yEn-bB-rfH"/>
+                            <constraint firstItem="0WP-KB-69B" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="zrm-Xj-dW2"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="webView" destination="0WP-KB-69B" id="rTC-M7-KMI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-40.799999999999997" y="-17.541229385307346"/>
         </scene>
     </scenes>
 </document>
